fix bus on safari < 14.

--- a/src/components/MyStory/Mystory.css
+++ b/src/components/MyStory/Mystory.css
@@ -74,6 +74,7 @@
   max-width: 20%;
   width: 140px;
   position: relative;
+  z-index: 2;
 }
 .globe {
   border: 2px solid black;
@@ -200,6 +201,7 @@
 .funfact-container .back {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  visibility:visible;
   background: var(--card-back-bg);
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
@@ -229,12 +231,14 @@
   transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1),
     -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
   -webkit-backface-visibility: hidden;
+  visibility:visible;
   backface-visibility: hidden;
   min-height: 200px;
 }
 .front::after {
-  backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  visibility:visible;
+  backface-visibility: hidden;
   position: absolute;
   content: '';
   top: 0;
@@ -256,7 +260,7 @@
 .inner {
   -webkit-perspective: inherit;
   perspective: inherit;
-  z-index: 2;
+  z-index: -1;
   width: 100%;
 
   padding-left: 1rem;
