--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -131,7 +131,9 @@
       -ms-flex-align: center;
           align-items: center;
   font-size: .875rem;
-  gap: 1rem;
+}
+.project-buttons > * + * {
+  margin-left: 1rem;
 }
 .project-dark {
   color: white;
